--- a/todolist/static/scss/modules/todo/list/_list.scss
+++ b/todolist/static/scss/modules/todo/list/_list.scss
@@ -95,7 +95,8 @@
 
         // Task name
         &-name {
-            margin:0 70px;
+            //width:calc(100% - 100px);
+            margin:7px 65px 0;
         }
     }
 }
